# sport_record

./: .gitignore  README.md
ScavengerDemo/ScavengerDemo/: AppDelegate.swift  OcTestViewController.h  OcTestViewController.m  ViewController.swift
ScavengerDemo/ScavengerDemo.xcodeproj/: project.pbxproj
ScavengerDemo/ScavengerDemo.xcodeproj/project.xcworkspace/xcuserdata/kerwin.xcuserdatad/: UserInterfaceState.xcuserstate
ScavengerDemo/ScavengerDemo.xcodeproj/xcuserdata/kerwin.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
ScavengerDemo/ScavengerDemo.xcodeproj/xcuserdata/kerwin.xcuserdatad/xcschemes/: xcschememanagement.plist
ScavengerDemo/ScavengerDemo/Base.lproj/: Main.storyboard
ScavengerDemo/ScavengerDemo/PreventionCheatKit.framework/: PreventionCheatKit
ScavengerDemo/ScavengerDemo/PreventionCheatKit.framework/Headers/: GyroModel.h  PreventionCheatKit.h  ScavengerService.h
ScavengerDemo/ScavengerDemo/PreventionCheatKit.framework/Modules/: module.modulemap
android-scavenger/: record  settings.gradle.kts
android-scavenger/app/: build.gradle.kts
android-scavenger/app/src/androidTest/java/com/gritti/scavenger/: ExampleInstrumentedTest.kt
android-scavenger/app/src/main/: AndroidManifest.xml
android-scavenger/app/src/main/assets/: mock_path2.json
android-scavenger/app/src/main/java/com/gritti/scavenger/: MainActivity.kt  SampleApplication.kt
android-scavenger/app/src/main/java/com/gritti/scavenger/mock/: MockLocation.kt
android-scavenger/app/src/main/res/layout/: activity_main.xml
android-scavenger/app/src/main/res/values/: themes.xml
android-scavenger/app/src/test/java/com/gritti/scavenger/: ExampleUnitTest.kt
android-scavenger/gradle/wrapper/: gradle-wrapper.properties
android-scavenger/record_demo/: build.gradle.kts
android-scavenger/record_demo/src/androidTest/java/com/lrp/record_demo/: ExampleInstrumentedTest.kt
android-scavenger/record_demo/src/main/: AndroidManifest.xml
android-scavenger/record_demo/src/main/java/com/lrp/record_demo/: MainActivity.kt  RecordActivity.kt  RecordApplication.kt  RecordArchiveActivity.kt
android-scavenger/record_demo/src/main/java/com/lrp/record_demo/base/: BaseActivity.kt  BaseVM.kt
android-scavenger/record_demo/src/main/java/com/lrp/record_demo/vm/: MainVM.kt  RecordArchiveVM.kt  RecordVM.kt
android-scavenger/record_demo/src/main/res/layout/: activity_main.xml  activity_record.xml  activity_record_archive.xml
android-scavenger/record_demo/src/main/res/values/: strings.xml  themes.xml
android-scavenger/record_demo/src/test/java/com/lrp/record_demo/: ExampleUnitTest.kt
android-scavenger/scavenger/: build.gradle.kts
android-scavenger/scavenger/src/androidTest/java/com/gritti/scavenger/: ExampleInstrumentedTest.kt
android-scavenger/scavenger/src/main/: AndroidManifest.xml
android-scavenger/scavenger/src/main/aidl/com/gritti/scavenger/: SportServiceInterface.aidl
android-scavenger/scavenger/src/main/assets/: mock_path.json
android-scavenger/scavenger/src/main/cpp/: CMakeLists.txt  record_service_interface.cpp  scavenger.cpp
android-scavenger/scavenger/src/main/cpp/src/: manager.cpp  manager.h
android-scavenger/scavenger/src/main/cpp/src/cheat/: CheatSensorHandler.cpp
android-scavenger/scavenger/src/main/cpp/src/handler/: default_cheat_handler.cpp  default_cheat_handler.h  handler.cpp  handler.h  kalman_handler.cpp  kalman_handler.h  shake_cheat_handler.cpp  shake_cheat_handler.h
android-scavenger/scavenger/src/main/cpp/src/kalman/: KalmanTool.cpp
android-scavenger/scavenger/src/main/cpp/src/model/: cpoint.cpp
android-scavenger/scavenger/src/main/cpp/src/utils/: CoordinateUtils.h  PathSmoothTool.cpp  PathSmoothTool.h
android-scavenger/scavenger/src/main/java/com/gritti/scavenger/: RecordManager.kt  RecordServiceInterface.kt  RunningService.kt  ScavengerManager.kt  ScavengerNative.kt
ios-scavenger/: .gitignore
ios-scavenger/PreventionCheatKit/PreventionCheatKit.docc/: PreventionCheatKit.md
ios-scavenger/Products/PreventionCheatKit.framework/: Info.plist  PreventionCheatKit
ios-scavenger/Scaverger/: AppDelegate.swift  ViewController.swift
ios-scavenger/Scaverger/CPP/src/: manager.cpp  manager.h  record_service.cpp  record_service.h
ios-scavenger/Scaverger/CPP/src/cheat/: CheatSensorHandler.cpp  CheatSensorHandler.h
ios-scavenger/Scaverger/CPP/src/handler/: calorie_handler.cpp  calorie_handler.h  climb_handler.cpp  climb_handler.h  default_cheat_handler.cpp  default_cheat_handler.h  handler.cpp  handler.h  kalman_handler.cpp  kalman_handler.h  mileage_handler.cpp  mileage_handler.h  pace_handler.cpp  pace_handler.h  shake_cheat_handler.cpp  shake_cheat_handler.h
ios-scavenger/Scaverger/CPP/src/kalman/: KalmanTool.h
ios-scavenger/Scaverger/CPP/src/model/: cpoint.cpp  cpoint.h  crecord.cpp  crecord.h  km_node.cpp  km_node.h  result_point.cpp  result_point.h  sensor_value.cpp  sensor_value.h
ios-scavenger/Scaverger/CPP/src/storage/: storage_handler.cpp  storage_handler.h
ios-scavenger/Scaverger/CPP/src/storage/mmap/: mmfile.cpp  mmfile.h
ios-scavenger/Scaverger/CPP/src/utils/: CoordinateUtils.cpp  PathSmoothTool.cpp  timer.cpp  timer.h
ios-scavenger/Scaverger/OC/: GyroModel.m  ScavengerService.mm
ios-scavenger/ios-scavenger.xcodeproj/: project.pbxproj
ios-scavenger/ios-scavenger.xcodeproj/project.xcworkspace/xcuserdata/kerwin.xcuserdatad/: UserInterfaceState.xcuserstate
ios-scavenger/ios-scavenger.xcodeproj/project.xcworkspace/xcuserdata/liruopeng.xcuserdatad/: UserInterfaceState.xcuserstate
ios-scavenger/ios-scavenger.xcodeproj/xcshareddata/xcschemes/: PreventionCheatKit.xcscheme  PreventionCheatKitAAggregate.xcscheme  SDKDemo.xcscheme
ios-scavenger/ios-scavenger.xcodeproj/xcuserdata/kerwin.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
ios-scavenger/ios-scavenger.xcodeproj/xcuserdata/kerwin.xcuserdatad/xcschemes/: xcschememanagement.plist
ios-scavenger/ios-scavenger.xcodeproj/xcuserdata/liruopeng.xcuserdatad/xcschemes/: xcschememanagement.plist
(+20 files in other folders)
